// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with term renders correctly 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-3-69"
  >
    <div
      autoFocus={true}
      history={[Function]}
      term="foo-term"
    >
      Search
    </div>
    <div
      name="categories"
      render={[Function]}
    >
      List - 
      <div
        bar="foo"
        history={[Function]}
        list={
          Array [
            Object {
              "foo": "bar",
            },
          ]
        }
      >
        renderCategoriesList
      </div>
    </div>
  </div>
  <div
    name="searches"
    path="/search?term=foo-term"
    render={[Function]}
    renderError={[Function]}
  >
    List - 
    <div
      bar="foo"
      history={[Function]}
      list={
        Array [
          Object {
            "foo": "bar",
          },
        ]
      }
      match={
        Object {
          "params": Object {
            "term": "foo-term",
          },
        }
      }
    >
      renderList
    </div>
  </div>
</div>
`;

exports[`without term renders correctly 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-3-69"
  >
    <div
      autoFocus={true}
      history={[Function]}
      term=""
    >
      Search
    </div>
    <div
      name="categories"
      render={[Function]}
    >
      List - 
      <div
        bar="foo"
        history={[Function]}
        list={
          Array [
            Object {
              "foo": "bar",
            },
          ]
        }
      >
        renderCategoriesList
      </div>
    </div>
  </div>
  <div
    name="searches"
    path="/search?term="
    render={[Function]}
    renderError={[Function]}
  >
    List - 
    <div
      bar="foo"
      history={[Function]}
      list={
        Array [
          Object {
            "foo": "bar",
          },
        ]
      }
      match={
        Object {
          "params": Object {
            "term": "",
          },
        }
      }
    >
      renderList
    </div>
  </div>
</div>
`;
